@@ -1,3 +1,6 @@
+Upcoming:
+- Added forge:ores/dimensional_shard tag to the dimensional shard ores
+
 1.18-3.0.11:
 - Moved the Parameter class from RFToolsControl to the API
 
